<resources>
    <string name="app_name">GLA2 Wagner Ferreira</string>
    <string name="name">Name</string>
    <string name="dd_mm_yyy">dd/mm/yyyy</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_format">+1 (xxx) xxxx-xxxx</string>
    <string name="email">email</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="email_format">email@example.com</string>
    <string name="preference_file_key">com.example.gla2wagnerferreira.PREFERENCE_FILE_KEY</string>
    <string name="textview">TextView</string>
    <string name="loading">loading…</string>
    <string name="delete">&#xf00d;</string>
    <string name="calendar">&#xf073;</string>
    <string name="signup">Signup</string>
    <string name="list">List</string>
    <string name="list_of_customers">List of Customers</string>
    <string name="error_too_short">Too short name</string>
    <string name="error_invalid_date">Invalid date (use dd/MM/yyyy format)</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="this_email_is_already_registered">This email is already registered.</string>
</resources>