<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1.0" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_Title"
                    android:layout_width="150dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:onClick="goPageData"
                    android:text="@string/list"
                    android:textSize="26sp"
                    app:cornerRadius="4dp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1.0" />

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:drawable/dialog_holo_light_frame">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/edit_FirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="18dp"
                    android:autofillHints="name"
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:text="" />
            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1.0" />

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:drawable/dialog_holo_light_frame">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/edit_LastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="18dp"
                    android:autofillHints="name"
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:text="" />
            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1.0" />

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:drawable/dialog_holo_light_frame">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/birthday" />


                <EditText
                    android:id="@+id/edit_Birthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="18dp"
                    android:autofillHints="birthday"
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/dd_mm_yyy"
                    android:inputType="text"
                    android:text="" />


            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1.0" />

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:drawable/dialog_holo_light_frame">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/edit_PhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="18dp"
                    android:autofillHints="name"
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/phone_format"
                    android:inputType="phone"
                    android:text="" />
            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1.0" />

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:drawable/dialog_holo_light_frame">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edit_Email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="18dp"
                    android:autofillHints="email@example.com"
                    android:ems="10"
                    android:gravity="bottom"
                    android:hint="@string/email_format"
                    android:inputType="textEmailAddress"
                    android:text="" />
            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/text_Validate"
                android:layout_width="300dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.0"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/design_default_color_error"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:onClick="signup"
                android:text="@string/signup"
                android:textSize="26sp"
                app:cornerRadius="4sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_weight="1.0" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>